[wayland] Profile selection dialog unresponsive to mouse input due to hover tooltip that doesn't go away
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
People
(Reporter: ke5trel, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
STR:
- Start profile manager with
MOZ_ENABLE_WAYLAND=1 firefox --ProfileManager
on Ubuntu 22.04. - Hover cursor over a profile name in the list so that the path is shown in tooltip.
Expected:
Tooltip disappears when cursor is moved.
Actual:
Tooltip remains unless moving cursor over the tooltip itself. The dialog is not interactive with the mouse while the tooltip is visible.
Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=3799c70b577392cb5a33eb53129316329fb8338d&tochange=cee8c3405f2ed0e2a7170113463495f5a7f868ff
Likely regressed by Bug 1621660.
Bug 1766197 has made it worse, moving the cursor over the tooltip no longer makes it disappear. Using the keyboard to shift focus can remove the tooltip and restore interaction.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9a1090f6834c74c12e93368ef3dc3d3f854ceab5&tochange=7882b9b0684c4b13c317d811061331a527fca9cd
Regressed by Bug 1766197.
Assignee | ||
Comment 1•2 years ago
|
||
I expect https://phabricator.services.mozilla.com/D114240 should exclude tooltips.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 3•2 years ago
|
||
Comment 5•2 years ago
|
||
bugherder |
Comment 6•2 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox107
towontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Reproducible on a 2022-10-11 Nightly build on Ubuntu 22 using the STR from the Description.
Verifed as fixed on Firefox 108.0b3(build ID: 20221117185908) and Nightly 109.0a1(build ID: 20221118094451) on Ubuntu 22.
Description
•