Bug 1794613 [Wayland] Don't make tooltips modal r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D160328